@@ -89,6 +89,7 @@ Trunk (unreleased changes)
    HADOOP-2465 When split parent regions are cleaned up, not all the columns are
                deleted
    HADOOP-2468 TestRegionServerExit failed in Hadoop-Nightly #338
+   HADOOP-2467 scanner truncates resultset when > 1 column families
    
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
